--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ body {
   margin: 2em;
 }
 
-h1 {
+h1,
+h2 {
   font-style: italic;
   color: #3f3f3f;
 }
 
+h2 {
+  font-weight: normal;
+}
+section {
+  margin-bottom: 3em;
+}
 p {
   width: max(300px, 40vw);
 }
