--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   margin: 2em;
+  font-weight: 300;
 }
 
 h1,
 h2 {
   font-style: italic;
+  font-weight: 500;
   color: #3f3f3f;
 }
 
